--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,13 +3,13 @@ spring:
     name: batch-challenge
 
   datasource:
-   username: ${DB_USERNAME}
-   password: ${DB_PASSWORD}
-   url: ${DB_URL}
-   jdbcUrl: ${DB_URL}
-   driver-class-name: org.postgresql.Driver
-   hikari:
-    jdbc-url: ${DB_URL}
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
+    url: ${DB_URL}
+    jdbcUrl: ${DB_URL}
+    driver-class-name: org.postgresql.Driver
+    hikari:
+      jdbc-url: ${DB_URL}
   jpa:
     hibernate:
       ddl-auto: update
@@ -17,6 +17,12 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         show-sql: true
+
+  batch:
+    job:
+      enabled: true
+    jdbc:
+      initialize-schema: true
 
 app:
   paths:
